# Handwritten-Character-Recognition

./: .gitignore  BUTTON_REFERENCE.md  FINAL_VERIFICATION_REPORT.md  FRONTEND_BUTTON_VERIFICATION.md  FRONTEND_VERIFICATION_COMPLETE.md  README.md  ROUTES_REFERENCE.py  ROUTE_VERIFICATION_REPORT.md  VERIFICATION_SUMMARY.txt  app.py  config.py  impr.md  main.py  pyproject.toml  requirements.txt  test.py  test_comprehensive.py  test_frontend_buttons.py
backend/: auth.py  db.py  predict.py
model/: train_model.py
static/css/: admin.css  admin_dashboard.css  dashboard.css  home.css  style.css  theme.css
static/js/: script.js  theme.js
templates/: base.html  home.html
templates/admin/: admin_analytics.html  admin_dashboard.html  admin_login.html  admin_predictions.html  admin_reports.html  admin_settings.html  base_admin.html  users.html  view_user.html
templates/user/: analytics.html  dashboard.html  download.html  history.html  login.html  predict.html  profile.html  register.html  reports.html  top_predictions.html
