[project]
name = "handwritten-character-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "mysql-connector-python>=9.6.0",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "reportlab>=4.4.10",
    "speechrecognition>=3.16.0",
    "tensorflow>=2.21.0",
]
